Refactoring CamundaWorkerContainer and BpmnTestProcessInstance